Changes in openair 0.4-17 [2011-04-21]
=====================================
*	use avg.time in calcPercentile instead of 'period' to ensure
	consistency with other functions (timePlot would fail with percentiles)

Changes in openair 0.4-17 [2011-04-21]
=====================================
*	use readRDS and not .readRDS (caused failure on R Dev)
*	openair now depends on >=R2.13.0
*	NEW FUNCTION sqStats to calculate common and pollutant-specfic
	air quality statsitics by year and site.
*	Changed option data.capture in rollingMean to data.thresh to
	be consistent with other functions.

Changes in openair 0.4-16 [2011-04-13]
=====================================
*	Fixed bugs in cutData when a partial year was used with type
  	= "month". Also affected type = "season" and "weekday". The
  	plots were labelled in the wrong order.
*	Ensure that missing wind sectors are skipped in type = "wd"
	for smoothTrend, MannKendall, timePlot and scatterPlot

Changes in openair 0.4-15 [2011-04-12]
=====================================
*	Preparation for CRAN release
*	removed some restrictions on type/period combinations in polarAnnulus

Changes in openair 0.4-14 [2011-04-05]
=====================================
*	Added preliminary greyscale method to openColours and linked in 
      strip background and other text and line colour control for 
      standard openair plots.

Changes in openair 0.4-13 [2011-03-31]
=====================================
*	Removed ad-hoc sites from importKCL, added site classification
	to the help file and ensured GMT is exported.

Changes in openair 0.4-12 [2011-03-22]
=====================================

*	Added y.relation option to smoothTrend and MannKendall to
         allow flexible y-scales.
*	NEW FUNCTION 'percentileRose' for flexible plotting of
         percentiles by wind direction
*	 NEW FUNCTION 'selectRunning' for selecting run lengths of a numeric
         variable above a certain threshold.